@@ -118,6 +118,7 @@
         if( $feed_items->have_posts() ) {
 
             $output .= "$links_before";
+            $output .= get_locale();
 
             while ( $feed_items->have_posts() ) {
                 $feed_items->the_post();
@@ -127,7 +128,7 @@
                 do_action( 'wprss_get_post_data' );
 
                 // convert from Unix timestamp
-                $date = date( $general_settings['date_format'], intval( get_post_meta( get_the_ID(), 'wprss_item_date', true ) ) );
+                $date = date_i18n( $general_settings['date_format'], intval( get_post_meta( get_the_ID(), 'wprss_item_date', true ) ) );
 
                 if ( $general_settings['title_link'] == 1 ) {
                     $output .= "$link_before" . '<a ' . $display_settings['open'] . ' ' . $display_settings['follow'] . ' href="'. $permalink . '">'. get_the_title(). '</a>';
