@@ -1,5 +1,6 @@
 3.3 ()
 New feature: OPML importer 
+Enhanced: Date strings now change according to locale being used (i.e. compatible with WPML)
 
 3.2 (2013-07-06)
 New feature: Parameter to limit number of feeds displayed
